--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           float: left;
           background-color: #333;
           border-radius: 40px;
-          margin: 30px 0;
+          margin: 30px ;
           padding: 20px;
         }
 
